add amount form

--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "validate": "pnpm tsc && pnpm lint && pnpm format"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
     "bip32": "5.0.0-rc.0",
     "bip39": "^3.1.0",
     "bitcoinjs-lib": "7.0.0-rc.0",
@@ -20,9 +24,11 @@
     "next": "14.2.10",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "tiny-secp256k1": "^2.2.3"
+    "tiny-secp256k1": "^2.2.3",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
